tests/NormalTests/paczka1/fuzzy1/96446004.err
Error in line 1: uVlEdUv S645 94,9
Error in line 3: 4kq0qNEc A230 66,4
Error in line 12: 4kq0qNEc S839 88,1
Error in line 13: uVlEdUv A230 77,0
Error in line 16: JcN S645 31,6
Error in line 23: 5GqrUY6RT9i S645 183,8
Error in line 26: JcN A230 17,60
